--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,8 @@
   display: grid;
   grid-template-rows: 70px auto;
   grid-template-columns: auto;
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;
+  height: 100vh; */
   grid-template-areas:
     "breadcrumbs labels"
     "graphs graphs";
