--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,19 @@
   margin: 0;
 }
 
+body {
+  color: #41362f;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  /* line-height: 1.36;
+  font-size: 1.4rem; */
+}
+
 .container {
   display: grid;
   grid-template-rows: 50px auto;
-  grid-template-columns: 50px auto;
+  grid-template-columns: 100px auto;
   width: 100vw;
   height: 100vh;
   grid-template-areas:
@@ -17,17 +26,17 @@
 
 .navBar {
   grid-area: navBar;
-  background-color: aqua;
+  /* background-color: aqua; */
 }
 
 .sideBar {
   grid-area: sideBar;
-  background-color: blue;
+  background-color: #000000;
 }
 
 .mainContent {
   grid-area: mainContent;
-  background-color: greenyellow;
+  background-color: #f5f5f5;
 }
 
 .mainContent-container {
@@ -43,15 +52,62 @@
 
 .breadcrumbs {
   grid-area: breadcrumbs;
-  background-color: magenta;
+  align-self: center;
+  padding-left: 10px;
+  /* background-color: magenta; */
 }
 
 .labels {
   grid-area: labels;
-  background-color: khaki;
+  align-self: center;
+  /* background-color: khaki; */
 }
 
 .graphs {
   grid-area: graphs;
-  background-color: palevioletred;
+  /* background-color: palevioletred; */
+  padding: 10px;
+}
+
+.redacted span {
+  position: relative;
+  white-space: pre;
+}
+.redacted span:after {
+  background: #dedede;
+  border-radius: 1em;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.35);
+  content: " ";
+  width: 100%;
+  height: 1.2em;
+  left: 0;
+  position: absolute;
+  transform: skewY(-5deg) rotate(5deg);
+}
+
+#customers {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#customers td,
+#customers th {
+  border: 1px solid #ffffff;
+  padding: 8px;
+  background-color: #ffffff;
+}
+
+/* #customers tr:nth-child(even) {
+  background-color: #f2f2f2;
+} */
+
+#customers tr:hover {
+  background-color: #ddd;
+}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #f5f5f5;
 }
